--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "vercel-start": "node api/index.js"
+    "dev": "nodemon src/api/index.js"
   },
   "author": "Abhirup",
   "license": "ISC",
